--- a/css/why-kasauli.css
+++ b/css/why-kasauli.css
@@ -89,6 +89,7 @@
   font-size: clamp(48px, 9.5vw, 140px);
   font-weight: 600;
   padding-bottom: 10vw;
+  margin-left: 10px;
   color: #ffffff;
   text-transform: uppercase;
   letter-spacing: 12px;
@@ -136,6 +137,9 @@
 #tourism-dock-point {
   display: inline-block;
   padding-bottom: 25px;
+  font-size: clamp(48px, 4vw, 80px);
+  font-weight: 600;
+  color: #ffffff;
 }
 
 .kasauli-title-center {
@@ -464,7 +468,7 @@
     color: #ffffff;
     letter-spacing: 2px;
     text-transform: uppercase;
-    margin-bottom: clamp(8px, 1.5vw, 15px);
+    margin-bottom: clamp(4px, 0.3vw, 15px);
 }
 
 .serenity-main {
@@ -510,6 +514,7 @@
     transform: translateY(6px);
     transition: opacity .35s ease, transform .35s ease;
     white-space: nowrap;
+    margin-left: -15px;
 }
 .serenity-rotator .serenity-subtext.active {
     visibility: visible;
